--- a/AgendamentoOn/src/main/resources/templates/index.html
+++ b/AgendamentoOn/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,10 +8,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" th:href="@{/assets/css/style.css}" />
 </head>
+
 <body>
   <div class="container d-flex align-items-center justify-content-center min-vh-100">
     <div class="text-center">
-      <img th:src="@{/assets/img/logo-agendamento.png}" alt="Logo AgendamentoOn" class="img-fluid mb-4" style="max-width: 250px;">
+      <img th:src="@{/assets/img/logo-agendamento.png}" alt="Logo AgendamentoOn" class="img-fluid mb-4"
+        style="max-width: 250px;">
       <h1 class="text-main fw-bold" th:text="${titulo}">AgendamentoOn</h1>
       <h5 class="text-main mb-4" th:text="${subtitulo}">– Studio Irys Lima</h5>
       <p class="fw-semibold" th:text="${mensagemBoasVindas}">Seja bem-vindo(a) ao sistema de agendamento online.</p>
@@ -18,8 +21,9 @@
         Com o objetivo de automatizar e otimizar o processo de agendamento permitindo que clientes agendem
         atendimentos de forma independente, sem a necessidade de contato direto com a profissional.
       </p>
-      <a th:href="@{/agendamentos}" class="btn btn-main mt-3">Agendar horário</a>
+      <a th:href="@{/api/agenda}" class="btn btn-main mt-3">Agendar horário</a>
     </div>
   </div>
 </body>
+
 </html>
