ajustes html e js

--- a/AgendamentoOn/src/main/resources/templates/agenda.html
+++ b/AgendamentoOn/src/main/resources/templates/agenda.html
@@ -178,9 +178,9 @@
         <a href="#" data-section="perfil"><i class="fa-regular fa-user"></i> Meu perfil</a>
       </div>
       <div class="policies mt-auto" style="position: relative; bottom: 50px">
-        <a href="/login/termos.html"><i class="fa-regular fa-file-lines"></i> Termo de Consentimento e
+        <a th:href="@{/termos}"><i class="fa-regular fa-file-lines"></i> Termo de Consentimento e
           Política de Privacidade</a><br />
-        <a href="/login/politicas.html"><i class="fa-regular fa-file-lines"></i> Política de Cancelamento e
+        <a th:href="@{/politicas}"><i class="fa-regular fa-file-lines"></i> Política de Cancelamento e
           Reagendamento</a>
       </div>
     </div>
