--- a/AgendamentoOn/src/main/resources/templates/agendaAdmin.html
+++ b/AgendamentoOn/src/main/resources/templates/agendaAdmin.html
@@ -259,14 +259,14 @@
             </div>
           </div>
 
-         <button
-    id="btnBloquearData"
-    class="btn btn-confirm ms-2"
-    style="background-color: #e91e63; color: white;"  <!-- rosa e texto branco -->
-    onclick="window.location.href='/api/agenda'"
->
-    Ir para Agendamento
-</button>
+          <button
+                  id="btnBloquearData"
+                  class="btn btn-confirm ms-2"
+                  style="background-color: #e91e63; color: white;"
+                  onclick="window.location.href='/api/agenda'"
+          >
+            Ir para Agendamento
+          </button>
           <button
             id="btnBloquearData"
             class="btn btn-confirm ms-2"
